fixed on mobile

--- a/src/sass/_common/table.scss
+++ b/src/sass/_common/table.scss
@@ -106,9 +106,6 @@ table {
     #statement-table, #profit-table {
         th {
             text-align: center;
-            @media (max-width: 480px) {
-                text-align: left;
-            }
         }
         tr {
             & > th.details, & > td.details {
@@ -117,9 +114,6 @@ table {
             td {
                 overflow: initial;
                 text-align: center;
-                @media (max-width: 480px) {
-                    text-align: left;
-                }
             }
             td.desc {
                 max-width: 30em;
@@ -132,7 +126,6 @@ table {
 
                     .button {
                         padding: 8px 15px;
-                        position: absolute;
                         top: 0.25rem;
                     }
                 }
